# vendor_opensource_display-drivers

./: .gitignore  Android.bp  Android.mk  BUILD.bazel  OWNERS  README.md  display_driver_board.mk  display_driver_build.bzl  display_modules.bzl  target.bzl
config/: gki_bengaldisp.conf  gki_blairdisp.conf  gki_canoedisp.conf  gki_canoedispconf.h  gki_monacodisp.conf  gki_parrotdisp.conf  gki_sundisp.conf
display_drivers_auto/: display_modules_auto.bzl  target_auto.bzl
display_drivers_auto/bindings/: sde-shd.txt
display_drivers_auto/msm/: Android.mk  Kbuild  msm_drv.c  msm_drv.h  phys_shd_vid.c  sde_dsc_helper.c  shd_drm.c  shd_hw.c  shd_hw.h
msm/: Android.mk  Kbuild  driver_novatek  msm_atomic.c  msm_drv.c  msm_drv.h  msm_gem.c  msm_gem_prime.c  msm_kms.h  msm_smmu.c  sde_cesta.c  sde_cesta.h  sde_cesta_hw.c  sde_dbg.c  sde_dbg.h  sde_dsc_helper.c  sde_dsc_helper.h  sde_power_handle.c  shd_drm.c  shd_drm.h  shd_hw.c  shd_hw.h
msm/dp/: dp_altmode.c  dp_catalog.c  dp_ctrl.c  dp_debug.c  dp_debug.h  dp_display.c  dp_panel.c  dp_panel.h
msm/dsi/: dsi_catalog.c  dsi_catalog.h  dsi_clk_manager.c  dsi_ctrl.c  dsi_ctrl_hw.h  dsi_ctrl_hw_cmn.c  dsi_defs.h  dsi_display.c  dsi_display.h  dsi_display_test.c  dsi_drm.c  dsi_panel.c  dsi_panel.h  dsi_phy.c  dsi_phy_hw.h  dsi_phy_hw_v4_0.c  dsi_phy_hw_v5_0.c  dsi_phy_hw_v7_2.c  dsi_pll.c  dsi_pll_10nm.c  lcd_bias.c  lcd_bias.h
msm/mi_disp/: mi_backlight_ktz8866.c  mi_backlight_ktz8866.h  mi_cooling_device.c  mi_cooling_device.h  mi_disp_config.h  mi_disp_core.c  mi_disp_core.h  mi_disp_dbv_data.h  mi_disp_debugfs.c  mi_disp_debugfs.h  mi_disp_event.c  mi_disp_event.h  mi_disp_feature.c  mi_disp_feature.h  mi_disp_file.c  mi_disp_file.h  mi_disp_flatmode.c  mi_disp_flatmode.h  mi_disp_lhbm.c  mi_disp_lhbm.h  mi_disp_log.c  mi_disp_log.h  mi_disp_nvt_alpha_data.h  mi_disp_parser.c  mi_disp_parser.h  mi_disp_print.c  mi_disp_print.h  mi_disp_procfs.c  mi_disp_procfs.h  mi_disp_sysfs.c  (+19 more)
rotator/: sde_rotator_dev.c  sde_rotator_r3.c
targets/: canoe.bzl  parrot.bzl  sun.bzl
(+96 files in other folders)
